--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,17 @@
     <string name="action_directory">Directory</string>
     <string name="meet_president_text">Meet The President</string>
     <string name="past_leaders_text">Past Leaders</string>
+    <string name="welcome">Welcome:</string>
+
+    <string name="name">Okafor Jerry Hanks: Student Member</string>
+
+    <string name="full_name">Full Name:</string>
+    <string name="donate">Donate</string>
+    <string name="pay_dues">Pay Dues</string>
+    <string name="name_tv">Name:</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_name">Name</string>
+    <string name="nse_logo">nse_logo</string>
+
 </resources>
